...
    ) {
        // Bouton Date
        OutlinedTextField(
            value = date,
            onValueChange = { if (isTest) onDateChange(it) },
            readOnly = !isTest,
            label = { Text("Date") },
            placeholder = { Text("MM/DD/YYYY") },
            modifier = Modifier.weight(1f),
            colors = OutlinedTextFieldDefaults.colors(
                focusedTextColor = Color.White,
                unfocusedTextColor = Color.White,
                focusedLabelColor = Color.White,
...

        // Bouton Heure
        OutlinedTextField(
            value = time,
            onValueChange = { if (isTest) onTimeChange(it) },
            readOnly = !isTest,
            label = { Text("Time") },
            placeholder = { Text("HH:MM") },
            modifier = Modifier.weight(1f),
            colors = OutlinedTextFieldDefaults.colors(
                focusedTextColor = Color.White,
                unfocusedTextColor = Color.White,
                focusedLabelColor = Color.White,
...
