<resources>
    <string name="app_name">P15-Eventorias</string>
    <string name="logo">Eventorias logo</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="signin_google">Sign in with Google</string>
    <string name="signin_email">Sign in with email</string>
    <string name="logout">Logout</string>
    <string name="validate">Validate</string>
    <string name="cancel">Cancel</string>
    <string name="events">Events</string>
    <string name="profil">Profile</string>
    <string name="add_event">Add event</string>
    <string name="profil_picture">Profil picture</string>
    <string name="user_name">Name</string>
    <string name="notifications">Notifications</string>
    <string name="search">Search</string>
    <string name="create_event">Creation of an event</string>
    <string name="arrow_back">BackButton</string>
    <string name="register">Register</string>
</resources>